<resources>
    <string name="app_name">Relation Revision</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="next_question">Next Question</string>
    <string name="cart_prod">Cartesian Product</string>
    <string name="cart_question">What is the Cartesian Product of the following:</string>
    <string name="answer_format">Answer in the form (x,y),(a,b),… etc</string>
    <string name="answer_retry_format">Answer in the form [(x,y),(a,b),…] etc</string>
    <string name="true_false">True or False</string>
    <string name="transitive">Transitive</string>
    <string name="reflexive">Reflexive</string>
    <string name="symmetric">Symmetric</string>
    <string name="retry">Retry</string>
    <string name="results">Results</string>
    <string name="submit">Submit</string>
    <string name="help">help</string>
    <string name="enter_question_id">Enter Question ID</string>
    <string name="confirm">Confirm</string>
    <string name="retry_information">If You Wish to retry a question, enter the question ID below</string>
    <string name="back_info">Back to results page</string>
    <string name="false_text">False</string>
    <string name="true_text">True</string>
    <string name="reflexive_question">Is the following relation reflexive?</string>
    <string name="symmetric_question">Is the following relation symmetric?</string>
    <string name="enter_the_1st_vertex_value">Enter the 1st Vertex Value</string>
    <string name="enter_the_2nd_vertex_value">Enter the 2nd Vertex Value</string>
    <string name="back_to_results">Back To Results</string>
    <string name="value_z">value z</string>
    <string name="value_x">value x</string>
    <string name="value_y">value y</string>
    <string name="transitive_question_command">Enter the value of x, y and z in that order</string>
    <string name="transitive_information">Is the following relation transitive?</string>
    <string name="enter_in_the_form_x_y">Enter in the form [x, y]</string>
    <string name="enter_in_the_form_y_z">Enter in the form [y, z]</string>
    <string name="enter_in_the_form_x_z">Enter in the form [x, z]</string>
    <string name="question_id">Question ID:</string>
    <string name="list_1">List 1:</string>
    <string name="list_2">List 2:</string>
    <string name="your_answer">Your Answer:</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="you_got_it">You got it:</string>
    <string name="set">Set:</string>
    <string name="relation">Relation:</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
</resources>